--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./assets//images/fabicon/favicon.ico">
     
-        <title>אודות | Clinic Name</title>
+        <title>אודות | Derma Clinic</title>
     
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="./assets/css/Bootstrap/bootstrap.min.css" />
@@ -69,7 +69,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-12 p-0">
                                     <div class="image-container">
-                                        <img src="./assets/images/about.png" alt="Clinic Image" class="img-fluid rounded mb-4">
+                                        <img src="./assets/images/about-banner.jpg" alt="Clinic Image" class="img-fluid rounded mb-4">
                                         <!-- Backdrop Overlay -->
                                         <div class="image-backdrop">
                                             <h2 class="text-white fw-bold">דרמה קליניק, קליניקה #1 בצפון לטיפולים אסתטיים וקוסמטיים</h2>
