--- a/treatments.html
+++ b/treatments.html
@@ -27,39 +27,44 @@
         <div class="container-fluid">
             <div class="row">
                 <!-- Sidebar -->
-                <nav class="col-md-4 col-lg-3 d-md-block sidebar">
+                <nav class="navbar col-md-4 col-lg-3 d-md-block sidebar">
                     <div class="sidebar-logo text-center">
                         <img src="./assets/images/logo.png" alt="Derma Clinic Logo">
                     </div>
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">בית</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">אודות</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">רופאים ומטפלים</a>
-                        </li>
-                        <li class="nav-item active-link">
-                            <a class="nav-link active" href="javascript:void(0)">טיפולים רפואיים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">טיפולים אסתטיים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">טיפולים קוסמטיים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">מכשירים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">בלוג</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">גלריה</a>
-                        </li>
-                    </ul>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">בית</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">אודות</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">רופאים ומטפלים</a>
+                            </li>
+                            <li class="nav-item active-link">
+                                <a class="nav-link active" href="javascript:void(0)">טיפולים רפואיים</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">טיפולים אסתטיים</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">טיפולים קוסמטיים</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">מכשירים</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">בלוג</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript:void(0)">גלריה</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
     
                 <!-- Content Area -->
