--- a/home.html
+++ b/home.html
@@ -176,7 +176,7 @@
         </div>
     </section>
 
-    <section class="vertical-scroll-slider campus-features my-5 py-md-5">
+    <!-- <section class="vertical-scroll-slider campus-features my-5 py-md-5">
         <h4 class="fw-bold mb-5 text-center">التخصصات والخدمات الأكاديمية</h4>
         <div class="container vertical-scroll-wrapper">
             <div class="vertical-slide">
@@ -346,6 +346,183 @@
                 </div>
             </div>
         </div>
+    </section> -->
+
+    <section class="vertical-scroll-slider campus-features my-5 py-md-5">
+        <h4 class="fw-bold text-center mb-4">التخصصات والخدمات الأكاديمية</h4>
+        <div class="swiper verticalSwiper">
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                    <div class="container text-center text-dark shadow rounded-4 p-5 position-relative">
+                        <span class="badge-soft">خدماتنا</span>
+                        <h5 class="fw-bold">نرافق طلابنا من لحظة التسجيل وحتى الحصول على الترخيص، من خلال خدمات تعليمية
+                            شاملة
+                        </h5>
+
+                        <div class="row justify-content-center row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 text-center">
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-chalkboard-teacher fa-2x mb-3"></i>
+                                    <h6>دعم أكاديمي، ومتابعة شخصية</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-desktop fa-2x mb-3"></i>
+                                    <h6>نظام تسجيل ومتابعة متطور</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-users fa-2x mb-3"></i>
+                                    <h6>توفير محتوى نظري وعملي شامل</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-book fa-2x mb-3"></i>
+                                    <h6>دروس، امتحانات داخلية وتدريب يناسب كل طالب</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-lightbulb fa-2x mb-3"></i>
+                                    <h6>أدوات ذكية لإدارة التعلم، المتابعة والمحتوى</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-university fa-2x mb-3"></i>
+                                    <h6>توجيه فردي خلال الدراسة والتعامل مع وزارة الصحة</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                    <div class="container text-center text-dark shadow rounded-4 p-5 position-relative">
+                        <span class="badge-soft">خدماتنا</span>
+                        <h5 class="fw-bold">نرافق طلابنا من لحظة التسجيل وحتى الحصول على الترخيص، من خلال خدمات تعليمية
+                            شاملة
+                        </h5>
+
+                        <div class="row justify-content-center row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 text-center">
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-chalkboard-teacher fa-2x mb-3"></i>
+                                    <h6>دعم أكاديمي، ومتابعة شخصية</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-desktop fa-2x mb-3"></i>
+                                    <h6>نظام تسجيل ومتابعة متطور</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-users fa-2x mb-3"></i>
+                                    <h6>توفير محتوى نظري وعملي شامل</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-book fa-2x mb-3"></i>
+                                    <h6>دروس، امتحانات داخلية وتدريب يناسب كل طالب</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-lightbulb fa-2x mb-3"></i>
+                                    <h6>أدوات ذكية لإدارة التعلم، المتابعة والمحتوى</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-university fa-2x mb-3"></i>
+                                    <h6>توجيه فردي خلال الدراسة والتعامل مع وزارة الصحة</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Optional Pagination -->
+                <div class="swiper-scrollbar"></div>
+            </div>
     </section>
 
     <section class="curriculum-section py-5 text-center text-dark">
@@ -486,15 +663,22 @@
         </div>
     </section>
 
-    <section class="success-gallery my-5">
+    <section class="success-gallery my-5 container">
         <h4 class="fw-bold text-center mb-5">من هنا بدأ نجاحهم</h4>
 
-        <div class="gallery-row d-flex justify-content-center gap-3 flex-wrap">
-            <img src="./assets/images/student-1.jpg" class="gallery-img grayscale" alt="">
-            <img src="./assets/images/student-2.jpg" class="gallery-img grayscale" alt="">
-            <img src="./assets/images/student-3.jpg" class="gallery-img active" alt="">
-            <img src="./assets/images/student-4.jpg" class="gallery-img grayscale" alt="">
-            <img src="./assets/images/student-5.jpg" class="gallery-img grayscale" alt="">
+        <div class="swiper successSwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="./assets/images/student-1.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-3.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-4.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-5.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-1.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-3.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-4.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="./assets/images/student-5.jpg" alt=""></div>
+            </div>
         </div>
     </section>
 
@@ -609,6 +793,30 @@
     <script src="./assets/js/Bootstrap/bootstrap.min.js"></script>
     <script src="./assets/js/swiper-bundle.min.js"></script>
 </body>
+
+<script>
+    const swiper = new Swiper('.successSwiper', {
+        slidesPerView: 'auto',
+        centeredSlides: true,
+        spaceBetween: 30,
+        loop: true,
+    });
+
+    var swiper9 = new Swiper(".verticalSwiper", {
+        direction: "vertical",
+        slidesPerView: 1.8,
+        centeredSlides: true,
+        spaceBetween: 5,
+        mousewheel: true,
+        mousewheel: {
+    releaseOnEdges: true
+  },
+       scrollbar: {
+    el: ".swiper-scrollbar",
+    draggable: true,
+  },
+    });
+</script>
 
 
 </html>
