--- a/home.html
+++ b/home.html
@@ -350,10 +350,9 @@
 
     <section class="vertical-scroll-slider campus-features my-5 py-md-5">
         <h4 class="fw-bold text-center mb-4">التخصصات والخدمات الأكاديمية</h4>
-        <div class="swiper verticalSwiper">
-            <div class="swiper-wrapper">
-                <!-- Slide 1 -->
-                <div class="swiper-slide">
+        <div class="container max-width-adaptive-md margin-bottom-lg">
+            <ul class="stack-cards js-stack-cards">
+                <li data-theme="default" class="stack-cards__item bg radius-lg shadow js-stack-cards__item">
                     <div class="container text-center text-dark shadow rounded-4 p-5 position-relative">
                         <span class="badge-soft">خدماتنا</span>
                         <h5 class="fw-bold">نرافق طلابنا من لحظة التسجيل وحتى الحصول على الترخيص، من خلال خدمات تعليمية
@@ -435,9 +434,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Slide 2 -->
-                <div class="swiper-slide">
+                </li>
+                <li data-theme="default" class="stack-cards__item bg radius-lg shadow js-stack-cards__item">
                     <div class="container text-center text-dark shadow rounded-4 p-5 position-relative">
                         <span class="badge-soft">خدماتنا</span>
                         <h5 class="fw-bold">نرافق طلابنا من لحظة التسجيل وحتى الحصول على الترخيص، من خلال خدمات تعليمية
@@ -519,10 +517,92 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Optional Pagination -->
-                <div class="swiper-scrollbar"></div>
-            </div>
+                </li>
+                <li data-theme="default" class="stack-cards__item bg radius-lg shadow js-stack-cards__item">
+                    <div class="container text-center text-dark shadow rounded-4 p-5 position-relative">
+                        <span class="badge-soft">خدماتنا</span>
+                        <h5 class="fw-bold">نرافق طلابنا من لحظة التسجيل وحتى الحصول على الترخيص، من خلال خدمات تعليمية
+                            شاملة
+                        </h5>
+
+                        <div class="row justify-content-center row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 text-center">
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-chalkboard-teacher fa-2x mb-3"></i>
+                                    <h6>دعم أكاديمي، ومتابعة شخصية</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-desktop fa-2x mb-3"></i>
+                                    <h6>نظام تسجيل ومتابعة متطور</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-users fa-2x mb-3"></i>
+                                    <h6>توفير محتوى نظري وعملي شامل</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-book fa-2x mb-3"></i>
+                                    <h6>دروس، امتحانات داخلية وتدريب يناسب كل طالب</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-lightbulb fa-2x mb-3"></i>
+                                    <h6>أدوات ذكية لإدارة التعلم، المتابعة والمحتوى</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col text-center">
+                                <div class="feature-box px-3 m-4">
+                                    <i class="fas fa-university fa-2x mb-3"></i>
+                                    <h6>توجيه فردي خلال الدراسة والتعامل مع وزارة الصحة</h6>
+                                    <div class="curved-underline mx-auto">
+                                        <svg viewBox="0 0 60 8" xmlns="http://www.w3.org/2000/svg"
+                                            preserveAspectRatio="none">
+                                            <path d="M0 4 Q30 10 60 4" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <section class="curriculum-section py-5 text-center text-dark">
@@ -792,6 +872,8 @@
     <script src="./assets/js/bootstrap-better-nav.js"></script>
     <script src="./assets/js/Bootstrap/bootstrap.min.js"></script>
     <script src="./assets/js/swiper-bundle.min.js"></script>
+
+    <script src="./assets/js/stacked-card.js"></script>
 </body>
 
 <script>
@@ -809,12 +891,12 @@
         spaceBetween: 5,
         mousewheel: true,
         mousewheel: {
-    releaseOnEdges: true
-  },
-       scrollbar: {
-    el: ".swiper-scrollbar",
-    draggable: true,
-  },
+            releaseOnEdges: true
+        },
+        scrollbar: {
+            el: ".swiper-scrollbar",
+            draggable: true,
+        },
     });
 </script>
 
